Adjust tests to allow for cluster topology validator to be used