@@ -20,25 +20,32 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.when;
 
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Sets;
 import com.palantir.atlasdb.keyvalue.cassandra.pool.CassandraServer;
+import com.palantir.conjure.java.api.config.service.HumanReadableDuration;
 import com.palantir.logsafe.exceptions.SafeIllegalArgumentException;
 import java.net.InetSocketAddress;
 import java.util.Collection;
+import java.util.Iterator;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.function.Predicate;
 import one.util.streamex.EntryStream;
 import one.util.streamex.StreamEx;
+import org.apache.thrift.transport.TTransportException;
+import org.junit.Before;
 import org.junit.Test;
 
 public class ClusterTopologyValidatorTest {
 
+    private static final CassandraServer newHostOneCassandraServer =
+            CassandraServer.of(InetSocketAddress.createUnresolved("1.1.1.1", 80));
     private static final String newHostOne = "new_host_one";
     private static final String newHostTwo = "new_host_two";
     private static final String newHostThree = "new_host_three";
@@ -50,29 +57,51 @@ public class ClusterTopologyValidatorTest {
     private static final Set<String> oldHosts = ImmutableSet.of(oldHostOne, oldHostTwo, oldHostThree);
     private static final Optional<Set<String>> uuids = Optional.of(ImmutableSet.of("uuid1", "uuid2", "uuid3"));
 
+    private ClusterTopologyValidator validator;
+
+    @Before
+    public void before() {
+        this.validator = spy(new ClusterTopologyValidator());
+    }
+
     @Test
-    public void validateNewlyAddedHosts_returnsEmptyWhenGivenNoServers() {
-        assertThat(ClusterTopologyValidator.getNewHostsWithInconsistentTopologies(ImmutableSet.of(), ImmutableMap.of()))
+    public void retriesUntilNoNewHostsReturned() {
+        Iterator<String> uuidIterator = uuids.get().iterator();
+        Map<CassandraServer, CassandraClientPoolingContainer> allHosts = setupHosts(newHosts);
+        EntryStream.of(allHosts)
+                .values()
+                .forEach(container -> setHostIds(Set.of(container), Optional.of(Set.of(uuidIterator.next())), uuids));
+        assertThat(validator.getNewHostsWithInconsistentTopologiesAndRetry(
+                        allHosts.keySet(),
+                        allHosts,
+                        HumanReadableDuration.milliseconds(1),
+                        HumanReadableDuration.seconds(20)))
                 .isEmpty();
     }
 
     @Test
-    public void validateNewlyAddedHosts_throwsWhenAllHostsDoesNotContainNewHosts() {
-        assertThatThrownBy(() -> ClusterTopologyValidator.getNewHostsWithInconsistentTopologies(
+    public void returnsEmptyWhenGivenNoServers() {
+        assertThat(validator.getNewHostsWithInconsistentTopologies(ImmutableSet.of(), ImmutableMap.of()))
+                .isEmpty();
+    }
+
+    @Test
+    public void throwsWhenAllHostsDoesNotContainNewHosts() {
+        assertThatThrownBy(() -> validator.getNewHostsWithInconsistentTopologies(
                         ImmutableSet.of(createCassandraServer("foo")), ImmutableMap.of()))
                 .isInstanceOf(SafeIllegalArgumentException.class);
     }
 
     @Test
-    public void validateNewlyAddedHosts_returnsEmpty_whenOnlyNewServers_andAllMatch() {
+    public void returnsEmptyWhenOnlyNewServersAndAllMatch() {
         Map<CassandraServer, CassandraClientPoolingContainer> allHosts = setupHosts(newHosts);
         setHostIds(allHosts.values(), uuids);
-        assertThat(ClusterTopologyValidator.getNewHostsWithInconsistentTopologies(allHosts.keySet(), allHosts))
+        assertThat(validator.getNewHostsWithInconsistentTopologies(allHosts.keySet(), allHosts))
                 .isEmpty();
     }
 
     @Test
-    public void validateNewlyAddedHosts_returnsNewHosts_whenOnlyNewServers_andOneMismatch() {
+    public void returnsNewHostsWhenOnlyNewServersAndOneMismatch() {
         Map<CassandraServer, CassandraClientPoolingContainer> allHosts = setupHosts(newHosts);
         setHostIds(
                 filterContainers(allHosts, server -> !server.equals(newHostOne)),
@@ -80,92 +109,110 @@ public class ClusterTopologyValidatorTest {
         setHostIds(
                 filterContainers(allHosts, newHostOne::equalsIgnoreCase),
                 Optional.of(ImmutableSet.of("uuid3", "uuid2")));
-        assertThat(ClusterTopologyValidator.getNewHostsWithInconsistentTopologies(allHosts.keySet(), allHosts))
+        assertThat(validator.getNewHostsWithInconsistentTopologies(allHosts.keySet(), allHosts))
                 .containsExactlyElementsOf(allHosts.keySet());
     }
 
     @Test
-    public void validateNewlyAddedHosts_returnsNewHosts_whenNewServers_mismatchOldServers() {
+    public void returnsNewHostsWhenNewServersMismatchOldServers() {
         Map<CassandraServer, CassandraClientPoolingContainer> allHosts = setupHosts(Sets.union(newHosts, oldHosts));
         Set<CassandraServer> newServers = filterServers(allHosts, newHosts::contains);
         setHostIds(filterContainers(allHosts, newHosts::contains), Optional.of(ImmutableSet.of("uuid1", "uuid2")));
         setHostIds(filterContainers(allHosts, oldHosts::contains), Optional.of(ImmutableSet.of("uuid3", "uuid2")));
-        assertThat(ClusterTopologyValidator.getNewHostsWithInconsistentTopologies(newServers, allHosts))
+        assertThat(validator.getNewHostsWithInconsistentTopologies(newServers, allHosts))
                 .containsExactlyElementsOf(newServers);
     }
 
     @Test
-    public void validateNewlyAddedHosts_returnsOnlyMismatchingNewHosts() {
+    public void validateNewlyAddedHostsReturnsOnlyMismatchingNewHosts() {
         Predicate<String> badHostFilter = newHostOne::equalsIgnoreCase;
         Map<CassandraServer, CassandraClientPoolingContainer> allHosts = setupHosts(Sets.union(newHosts, oldHosts));
         Set<CassandraServer> newServers = filterServers(allHosts, newHosts::contains);
         Set<CassandraServer> badNewHosts = filterServers(allHosts, badHostFilter);
         setHostIds(filterContainers(allHosts, badHostFilter.negate()), uuids);
         setHostIds(filterContainers(allHosts, badHostFilter), Optional.of(ImmutableSet.of("uuid3", "uuid2")));
-        assertThat(ClusterTopologyValidator.getNewHostsWithInconsistentTopologies(newServers, allHosts))
+        assertThat(validator.getNewHostsWithInconsistentTopologies(newServers, allHosts))
                 .containsExactlyElementsOf(badNewHosts);
     }
 
     @Test
-    public void validateNewlyAddedHosts_addsAllHosts_ifNoHostHasEndpoint() {
+    public void validateNewlyAddedHostsAddsAllHostsIfNoHostHasEndpoint() {
         Map<CassandraServer, CassandraClientPoolingContainer> allHosts = setupHosts(newHosts);
         setHostIds(allHosts.values(), Optional.empty());
-        assertThat(ClusterTopologyValidator.getNewHostsWithInconsistentTopologies(allHosts.keySet(), allHosts))
+        assertThat(validator.getNewHostsWithInconsistentTopologies(allHosts.keySet(), allHosts))
                 .isEmpty();
     }
 
     @Test
-    public void validateNewlyAddedHosts_addsAllHosts_ifOneHostHasEndpoint() {
+    public void validateNewlyAddedHostsAddsAllHostsIfOneHostHasEndpoint() {
         Map<CassandraServer, CassandraClientPoolingContainer> allHosts = setupHosts(newHosts);
         Set<String> hostWithEndpoint = Set.of(newHostOne);
         setHostIds(filterContainers(allHosts, server -> !hostWithEndpoint.contains(server)), Optional.empty());
         setHostIds(filterContainers(allHosts, hostWithEndpoint::contains), uuids);
-        assertThat(ClusterTopologyValidator.getNewHostsWithInconsistentTopologies(allHosts.keySet(), allHosts))
+        assertThat(validator.getNewHostsWithInconsistentTopologies(allHosts.keySet(), allHosts))
                 .isEmpty();
     }
 
     @Test
-    public void validateNewlyAddedHosts_addsAllHosts_ifEndpointExistingHostIdsMatch() {
+    public void validateNewlyAddedHostsAddsAllHostsIfEndpointExistingHostIdsMatch() {
         Map<CassandraServer, CassandraClientPoolingContainer> allHosts = setupHosts(Sets.union(newHosts, oldHosts));
         Set<String> hostsWithEndpoints = ImmutableSet.of(newHostOne, oldHostOne);
         setHostIds(filterContainers(allHosts, server -> !hostsWithEndpoints.contains(server)), Optional.empty());
         setHostIds(filterContainers(allHosts, hostsWithEndpoints::contains), uuids);
-        assertThat(ClusterTopologyValidator.getNewHostsWithInconsistentTopologies(
+        assertThat(validator.getNewHostsWithInconsistentTopologies(
                         filterServers(allHosts, newHosts::contains), allHosts))
                 .isEmpty();
     }
 
     @Test
-    public void validateNewlyAddedHosts_addsNewHosts_unlessEndpointExistAndDoNotMatch() {
+    public void validateNewlyAddedHostsReturnsNewHostsUnlessEndpointExistAndDoNotMatch() {
         Map<CassandraServer, CassandraClientPoolingContainer> allHosts = setupHosts(Sets.union(newHosts, oldHosts));
         Set<String> hostsWithEndpoints = ImmutableSet.of(newHostOne, oldHostOne);
         setHostIds(filterContainers(allHosts, server -> !hostsWithEndpoints.contains(server)), Optional.empty());
         setHostIds(filterContainers(allHosts, newHostOne::equalsIgnoreCase), Optional.of(Set.of("uuid")));
         setHostIds(filterContainers(allHosts, oldHostOne::equalsIgnoreCase), uuids);
-        assertThat(ClusterTopologyValidator.getNewHostsWithInconsistentTopologies(
+        assertThat(validator.getNewHostsWithInconsistentTopologies(
                         filterServers(allHosts, newHosts::contains), allHosts))
                 .containsExactlyElementsOf(filterServers(allHosts, newHostOne::equalsIgnoreCase));
     }
 
     @Test
-    public void validateNewlyAddedHosts_noNewHostsAdded_ifOldHostsDoNotHaveQuorum() {
+    public void validateNewlyAddedHostsNoNewHostsAddedIfOldHostsDoNotHaveQuorum() {
         Map<CassandraServer, CassandraClientPoolingContainer> allHosts = setupHosts(Sets.union(newHosts, oldHosts));
         Set<CassandraServer> newCassandraServers = filterServers(allHosts, newHosts::contains);
         Set<String> hostsOffline = ImmutableSet.of(oldHostOne, oldHostTwo);
         setHostIds(filterContainers(allHosts, hostsOffline::contains), Optional.of(ImmutableSet.of()));
         setHostIds(filterContainers(allHosts, server -> !hostsOffline.contains(server)), uuids);
-        assertThat(ClusterTopologyValidator.getNewHostsWithInconsistentTopologies(newCassandraServers, allHosts))
+        assertThat(validator.getNewHostsWithInconsistentTopologies(newCassandraServers, allHosts))
                 .containsExactlyElementsOf(newCassandraServers);
     }
 
     @Test
-    public void validateNewlyAddedHosts_noNewHostsAdded_ifNewHostsDoNotHaveQuorum() {
+    public void validateNewlyAddedHostsNoNewHostsAddedIfNewHostsDoNotHaveQuorum() {
         Map<CassandraServer, CassandraClientPoolingContainer> allHosts = setupHosts(newHosts);
         Set<String> hostsOffline = ImmutableSet.of(newHostOne, newHostTwo);
         setHostIds(filterContainers(allHosts, hostsOffline::contains), Optional.of(ImmutableSet.of()));
         setHostIds(filterContainers(allHosts, server -> !hostsOffline.contains(server)), uuids);
-        assertThat(ClusterTopologyValidator.getNewHostsWithInconsistentTopologies(allHosts.keySet(), allHosts))
+        assertThat(validator.getNewHostsWithInconsistentTopologies(allHosts.keySet(), allHosts))
                 .containsExactlyElementsOf(allHosts.keySet());
+    }
+
+    @Test
+    public void fetchHostIdsReturnsEmptyOptionalWhenException() throws Exception {
+        CassandraClientPoolingContainer badContainer = mock(CassandraClientPoolingContainer.class);
+        when(badContainer.getCassandraServer()).thenReturn(newHostOneCassandraServer);
+        when(badContainer.<Optional<Set<String>>, Exception>runWithPooledResource(any()))
+                .thenThrow(new RuntimeException());
+        assertThat(validator.fetchHostIds(badContainer)).isEmpty();
+    }
+
+    @Test
+    public void fetchHostIdsReturnsEmptyListWhenNetworkErrors() throws Exception {
+        CassandraClientPoolingContainer badContainer = mock(CassandraClientPoolingContainer.class);
+        when(badContainer.getCassandraServer()).thenReturn(newHostOneCassandraServer);
+        when(badContainer.<Optional<Set<String>>, Exception>runWithPooledResource(any()))
+                .thenThrow(new TTransportException());
+        assertThat(validator.fetchHostIds(badContainer)).isPresent().hasValue(Set.of());
     }
 
     public Set<CassandraClientPoolingContainer> filterContainers(
@@ -190,11 +237,11 @@ public class ClusterTopologyValidatorTest {
     }
 
     private static void setHostIds(
-            Collection<CassandraClientPoolingContainer> containers, Optional<Set<String>> hostIds) {
+            Collection<CassandraClientPoolingContainer> containers, Optional<Set<String>>... hostIds) {
         containers.forEach(container -> {
             try {
                 when(container.<Optional<Set<String>>, Exception>runWithPooledResource(any()))
-                        .thenReturn(hostIds);
+                        .thenReturn(hostIds[0], hostIds);
             } catch (Exception e) {
                 throw new RuntimeException(e);
             }
